objects/dbu_ShippingInstruction__mdt.object
<CustomObject>
    <fields>
        <fullName>dbu_dropOff_Instruction_FR__c</fullName>
        <label>dbu_dropOff_Instruction_FR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_dropOff_Instruction__c</fullName>
        <label>dbu_dropOff_Instruction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_shipTo_Instruction_FR__c</fullName>
        <label>dbu_shipTo_Instruction_FR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_shipTo_Instruction__c</fullName>
        <label>dbu_shipTo_Instruction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_shippingInsNoForLabel_FR__c</fullName>
        <label>dbu_shippingInsNoForLabel_FR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dbu_shippingInsNoForLabel__c</fullName>
        <label>dbu_shippingInsNoForLabel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>dbu_ShippingInstruction</label>
    <pluralLabel>dbu_ShippingInstructions</pluralLabel>
</CustomObject>